--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: /:title
 
-title: BeiYuu.com
-url: http://beiyuu.com
+title: Alex Jia's blog
+url: http://jiazhe0909.github.io
 feed: /atom.xml
-author_info: <a href="http://beiyuu.com/">BeiYuu</a>
+author_info: <a href="http://jiazhe0909.github.io">Alex Jia</a>
